@@ -87,6 +87,7 @@ my $irods = WTSI::NPG::iRODS->new(environment          => \%ENV,
 
    }
 
+
   my $sample_merge = npg_seq_melt::merge::library->new(
    rpt_list                => '19900:8:12;19901:8:12;19902:8:12;19904:8:12',
    sample_id               =>  $sample_id, 
@@ -153,8 +154,12 @@ foreach my $file (keys %{$expected_output_files}){
 }
 
 my @coll_list = $irods->list_collection($irods_merged_dir,1);
+my $received_files = [];
+foreach my $f (sort @{$coll_list[0]}){
+        push @$received_files, $f;
+}
 my $expected_coll_list = expected_collection_list($irods_merged_dir);
-my $coll_result = is_deeply($coll_list[0], @$expected_coll_list, 'irods merged collection list as expected');
+my $coll_result = is_deeply($received_files, @$expected_coll_list, 'irods merged collection list as expected');
 
   if (!$coll_result) {
     carp "RECEIVED: ".Dumper($coll_list[0]);
@@ -248,10 +253,10 @@ sub expected_library_object {
      'local'                   => 0,
      'local_cram'              => 1,
      '_paths2merge' => [
-          q[irods://].$IRODS_PREFIX.q[.internal.sanger.ac.uk].$IRODS_ROOT.q[19900/19900_8#12.cram],
-          q[irods://].$IRODS_PREFIX.q[.internal.sanger.ac.uk].$IRODS_ROOT.q[19901/19901_8#12.cram],
-          q[irods://].$IRODS_PREFIX.q[.internal.sanger.ac.uk].$IRODS_ROOT.q[19902/19902_8#12.cram],
-          q[irods://].$IRODS_PREFIX.q[.internal.sanger.ac.uk].$IRODS_ROOT.q[19904/19904_8#12.cram]
+          q[irods:/].$IRODS_ROOT.q[19900/19900_8#12.cram],
+          q[irods:/].$IRODS_ROOT.q[19901/19901_8#12.cram],
+          q[irods:/].$IRODS_ROOT.q[19902/19902_8#12.cram],
+          q[irods:/].$IRODS_ROOT.q[19904/19904_8#12.cram]
                                    ],
      'reference_genome_path'   => qq[$tempdir/references/phix_unsnipped_short_no_N.fa],
      'sample_name'             => 'SC_WES_INT5948829',
